fix footer gap

--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -116,9 +116,8 @@
         padding: 40px
         &__wrapper
             grid-template: auto/repeat(2,270px)
-
-    .footer
-        padding: 40px
+        &__policy span
+            grid-template: auto / auto
     .stocks
         &__info
             gap: 20px
