--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -7,8 +7,8 @@
         padding: 70px 0
         gap: 20px
     &__text
-        display: flex
-        flex-direction: column
+        display: grid
+        grid-template: repeat(3, 1fr) / 1fr
         gap: 25px
         font-size: 18px
         line-height: 22px
@@ -20,12 +20,11 @@
         letter-spacing: 0.6em
         text-transform: uppercase
     &__contacts
-        display: flex
-        flex-direction: column
-        gap: 20px
         font-size: 24px
         &-link
+            display: block
             color: #fff
+            margin-bottom: 20px
             &:hover
                 color: #fff
                 text-decoration: none
